        documented in R Core versions to at least R-3.4.0).  This behaviour has
        been changed in pqR so that a name is attached when two dimensions
        have names provided one of these dimensions had dropping suppressed.
        This gives reliable results when matrices happen to have only one
        row or column, as illustrated by the last example in \code{help("[")}.
  \item The old serialization format, used prior to December 2001, is 
        no longer supported in pqR.  Code to support it would need to
        be changed to accomodate recent changes in pqR, and meaningful
        testing of such changes seems like it would require excessive
        efforts.
  \item It is now allowed to set the length of an ``expression''
        object with \code{length(e)<-len}, as for other vector
        types.  Any extra elements are set to \code{NULL}.
  \item Attempts to set attributes on a symbol are now silently ignored,
        both at the R level, with \code{attr} and \code{attributes}, and
        at the C API level, with \code{SET_ATTRIB}.  Getting the attributes
        of a symbol returns NULL.  Previously (and also in R-3.4.0),
        attributes could be attached to symbols, but they were lost
        when a workspace was saved and restored.
  \item There is no longer a \code{SET_PRINTNAME} function available in
        the C API (even if internal header files are used).  Setting the 
        print name of a symbol has never been
        a safe or reasonable thing to do.
  \item The default \code{size} for \code{new.env} is now \code{NA}, which
        gives an internal default, which now varies depending on the
        platform and configuration options.
  \item A warning is no longer generated when the first argument of
        \code{.C}, \code{.Fortran}, \code{.Call}, or \code{.External} is
        given its proper name of \code{.NAME}.  Passing more than one
        \code{PACKAGE}, \code{NAOK}, \code{DUP}, \code{HELPERS}, or