@@ -1,6 +1,6 @@
 /*
  *  pqR : A pretty quick version of R
- *  Copyright (C) 2013, 2014, 2015 by Radford M. Neal
+ *  Copyright (C) 2013, 2014, 2015, 2017 by Radford M. Neal
  *
  *  Based on R : A Computer Language for Statistical Data Analysis
  *  Copyright (C) 1995, 1996  Robert Gentleman and Ross Ihaka
@@ -31,217 +31,253 @@
 #define USE_FAST_PROTECT_MACROS
 #include "Defn.h"
 
-static SEXP cumsum(SEXP x, SEXP s)
+static void cumsum(SEXP x, SEXP s)
 {
+    R_len_t len = LENGTH(x);
+    long double sum = 0;
     int i;
-    long double sum = 0.;
     double *rx = REAL(x), *rs = REAL(s);
-    for (i = 0 ; i < LENGTH(x) ; i++) {
-	if (ISNAN(rx[i])) break;
-	sum += rx[i];
-	rs[i] = sum;
+    for (i = 0; i < len; i++) {
+        sum += rx[i];
+        rs[i] = sum;
     }
-    return s;
+    if (ISNAN(rs[len-1])) { /* note: len is not zero */
+        for (i = 0; i < len; i++)
+            if (ISNA(rx[i]))
+                break;
+        for ( ; i < len; i++)
+            rs[i] = NA_REAL;
+    }
 }
 
-/* We need to ensure that overflow gives NA here */
-static SEXP icumsum(SEXP x, SEXP s)
+static void icumsum(SEXP x, SEXP s)
 {
-    int i, *ix = INTEGER(x), *is = INTEGER(s);
-    double sum = 0.0;
-    for (i = 0 ; i < LENGTH(x) ; i++) {
-	if (ix[i] == NA_INTEGER) break;
-	sum += ix[i];
-	if(sum > INT_MAX || sum < 1 + INT_MIN) { /* INT_MIN is NA_INTEGER */
-	    warning(_("Integer overflow in 'cumsum'; use 'cumsum(as.numeric(.))'"));
-	    break;
-	}
-	is[i] = sum;
-    }
-    return s;
-}
-
-static SEXP ccumsum(SEXP x, SEXP s)
-{
+    R_len_t len = LENGTH(x);
+    int64_t sum = 0;
     int i;
+    int *ix = INTEGER(x), *is = INTEGER(s);
+    for (i = 0; i < len; i++) {
+        if (ix[i] == NA_INTEGER) break;
+        sum += ix[i];
+        /* We need to ensure that overflow gives NA here */
+        if (sum > INT_MAX || sum < 1 + INT_MIN) { /* INT_MIN is NA_INTEGER */
+            warning(_("Integer overflow in 'cumsum'; use 'cumsum(as.numeric(.))'"));
+            break;
+        }
+        is[i] = sum;
+    }
+    for ( ; i < len; i++)
+        is[i] = NA_INTEGER;
+}
+
+static void ccumsum(SEXP x, SEXP s)
+{
+    R_len_t len = LENGTH(x);
     Rcomplex sum;
+    int i;
+    Rcomplex *cx = COMPLEX(x), *cs = COMPLEX(s);
     sum.r = 0;
     sum.i = 0;
-    for (i = 0 ; i < LENGTH(x) ; i++) {
-	sum.r += COMPLEX(x)[i].r;
-	sum.i += COMPLEX(x)[i].i;
-	COMPLEX(s)[i].r = sum.r;
-	COMPLEX(s)[i].i = sum.i;
+    for (i = 0; i < len; i++) {
+        sum.r += cx[i].r;
+        sum.i += cx[i].i;
+        cs[i].r = sum.r;
+        cs[i].i = sum.i;
     }
-    return s;
 }
 
-static SEXP cumprod(SEXP x, SEXP s)
+static void cumprod(SEXP x, SEXP s)
 {
+    R_len_t len = LENGTH(x);
+    long double prod = 1;
     int i;
-    long double prod;
     double *rx = REAL(x), *rs = REAL(s);
-    prod = 1.0;
-    for (i = 0 ; i < LENGTH(x) ; i++) {
-	prod *= rx[i];
-	rs[i] = prod;
+    for (i = 0; i < len; i++) {
+        prod *= rx[i];
+        rs[i] = prod;
     }
-    return s;
+    if (ISNAN(rs[len-1])) { /* note: len is not zero */
+        for (i = 0; i < len; i++)
+            if (ISNA(rx[i]))
+                break;
+        for ( ; i < len; i++)
+            rs[i] = NA_REAL;
+    }
 }
 
-static SEXP ccumprod(SEXP x, SEXP s)
+static void ccumprod(SEXP x, SEXP s)
 {
     Rcomplex prod, tmp;
+    R_len_t len = LENGTH(x);
     int i;
+    Rcomplex *cx = COMPLEX(x), *cs = COMPLEX(s);
     prod.r = 1;
     prod.i = 0;
-    for (i = 0 ; i < LENGTH(x) ; i++) {
-	tmp.r = prod.r;
-	tmp.i = prod.i;
-	prod.r = COMPLEX(x)[i].r * tmp.r - COMPLEX(x)[i].i * tmp.i;
-	prod.i = COMPLEX(x)[i].r * tmp.i + COMPLEX(x)[i].i * tmp.r;
-	COMPLEX(s)[i].r = prod.r;
-	COMPLEX(s)[i].i = prod.i;
+    for (i = 0; i < len; i++) {
+        tmp = prod;
+        R_from_C99_complex(&prod, 
+                           C99_from_R_complex(&tmp) * C99_from_R_complex(cx+i));
+        cs[i] = prod;
     }
-    return s;
 }
 
-static SEXP cummax(SEXP x, SEXP s)
+static void cummax(SEXP x, SEXP s)
 {
+    double max = R_NegInf;
+    R_len_t len = LENGTH(x);
     int i;
-    double max, *rx = REAL(x), *rs = REAL(s);
-    max = R_NegInf;
-    for (i = 0 ; i < LENGTH(x) ; i++) {
-	if(ISNAN(rx[i]) || ISNAN(max))
-	    max = max + rx[i];  /* propagate NA and NaN */
-	else
-	    max = (max > rx[i]) ? max : rx[i];
-	rs[i] = max;
+    double *rx = REAL(x), *rs = REAL(s);
+    for (i = 0; i < len; i++) {
+        if (ISNAN(rx[i])) {
+            max = rx[i];
+            break;
+        }
+        max = max > rx[i] ? max : rx[i];
+        rs[i] = max;
     }
-    return s;
+    for ( ; i < len; i++) {
+        if (ISNA(rx[i])) {
+            max = rx[i];
+            break;
+        }
+        rs[i] = max;
+    }
+    for ( ; i < len; i++)
+        rs[i] = max;
 }
 
-static SEXP cummin(SEXP x, SEXP s)
+static void cummin(SEXP x, SEXP s)
 {
+    double min = R_PosInf;
+    R_len_t len = LENGTH(x);
     int i;
-    double min, *rx = REAL(x), *rs = REAL(s);
-    min = R_PosInf; /* always positive, not NA */
-    for (i = 0 ; i < LENGTH(x) ; i++ ) {
-	if (ISNAN(rx[i]) || ISNAN(min))
-	    min = min + rx[i];  /* propagate NA and NaN */
-	else
-	    min = (min < rx[i]) ? min : rx[i];
-	rs[i] = min;
+    double *rx = REAL(x), *rs = REAL(s);
+    for (i = 0; i < len; i++) {
+        if (ISNAN(rx[i])) {
+            min = rx[i];
+            break;
+        }
+        min = min < rx[i] ? min : rx[i];
+        rs[i] = min;
     }
-    return s;
+    for ( ; i < len; i++) {
+        if (ISNA(rx[i])) {
+            min = rx[i];
+            break;
+        }
+        rs[i] = min;
+    }
+    for ( ; i < len; i++)
+        rs[i] = min;
 }
 
-static SEXP icummax(SEXP x, SEXP s)
+static void icummax(SEXP x, SEXP s)
 {
-    int i, *ix = INTEGER(x), *is = INTEGER(s);
-    int max = ix[0];
-    is[0] = max;
-    for (i = 1 ; i < LENGTH(x) ; i++) {
-	if(ix[i] == NA_INTEGER) break;
-	is[i] = max = (max > ix[i]) ? max : ix[i];
+    R_len_t len = LENGTH(x);
+    int *ix = INTEGER(x), *is = INTEGER(s);
+    int i;
+    int max = INT_MIN;
+    for (i = 0; i < len; i++) {
+        if (ix[i] == NA_INTEGER)
+            break;
+        max = max > ix[i] ? max : ix[i];
+        is[i] = max;
     }
-    return s;
+    for ( ; i < len; i++)
+        is[i] = NA_INTEGER;
 }
 
-static SEXP icummin(SEXP x, SEXP s)
+static void icummin(SEXP x, SEXP s)
 {
-    int i, *ix = INTEGER(x), *is = INTEGER(s);
-    int min = ix[0];
-    is[0] = min;
-    for (i = 1 ; i < LENGTH(x) ; i++ ) {
-	if(ix[i] == NA_INTEGER) break;
-	is[i] = min = (min < ix[i]) ? min : ix[i];
+    R_len_t len = LENGTH(x);
+    int *ix = INTEGER(x), *is = INTEGER(s);
+    int i;
+    int min = INT_MAX;
+    for (i = 0; i < len; i++ ) {
+        if (ix[i] == NA_INTEGER)
+            break;
+        min = min < ix[i] ? min : ix[i];
+        is[i] = min;
     }
-    return s;
+    for ( ; i < len; i++)
+        is[i] = NA_INTEGER;
 }
 
 static SEXP do_cum(SEXP call, SEXP op, SEXP args, SEXP env)
 {
     SEXP s, t, ans;
-    int i;
+
     checkArity(op, args);
     if (DispatchGroup("Math", call, op, args, env, &ans))
-	return ans;
-    if (isComplex(CAR(args))) {
-	t = CAR(args);
-	PROTECT(s = allocVector(CPLXSXP, LENGTH(t)));
-	setAttrib(s, R_NamesSymbol, getAttrib(t, R_NamesSymbol));
-	UNPROTECT(1);
-	if(LENGTH(t) == 0) return s;
-	for (i = 0 ; i < LENGTH(t) ; i++) {
-	    COMPLEX(s)[i].r = NA_REAL;
-	    COMPLEX(s)[i].i = NA_REAL;
-	}
-	switch (PRIMVAL(op) ) {
-	case 1:	/* cumsum */
-	    return ccumsum(t, s);
-	    break;
-	case 2: /* cumprod */
-	    return ccumprod(t, s);
-	    break;
-	case 3: /* cummax */
-	case 4: /* cummin */
-	    errorcall(call, _("min/max not defined for complex numbers"));
-	    break;
-	default:
-	    errorcall(call, _("unknown cumxxx function"));
-	}
-    } else if( ( isInteger(CAR(args)) || isLogical(CAR(args)) ) &&
-	       PRIMVAL(op) != 2) {
-	PROTECT(t = coerceVector(CAR(args), INTSXP));
-        int n = LENGTH(t);
-	PROTECT(s = allocVector(INTSXP, n));
-	setAttrib(s, R_NamesSymbol, getAttrib(t, R_NamesSymbol));
-	if (n == 0) {
-            UNPROTECT(2); /* t, s */
-            return s;
-        }
-	for (i = 0 ; i < n ; i++) INTEGER(s)[i] = NA_INTEGER;
-        SEXP ans;
-	switch (PRIMVAL(op) ) {
-	case 1:	/* cumsum */
-	    ans = icumsum(t,s);  /* may produce a warning, which allocates */
-	    break;
-	case 3: /* cummax */
-	    ans = icummax(t,s);
-	    break;
-	case 4: /* cummin */
-	    ans = icummin(t,s);
-	    break;
-	default:
-	    errorcall(call, _("unknown cumxxx function"));
-	}
-        UNPROTECT(2); /* t, s */
         return ans;
-    } else {
-	PROTECT(t = coerceVector(CAR(args), REALSXP));
-	PROTECT(s = allocVector(REALSXP, LENGTH(t)));
-	setAttrib(s, R_NamesSymbol, getAttrib(t, R_NamesSymbol));
-	UNPROTECT(2);
-	if(LENGTH(t) == 0) return s;
-	for(i = 0 ; i < LENGTH(t) ; i++) REAL(s)[i] = NA_REAL;
-	switch (PRIMVAL(op) ) {
-	case 1:	/* cumsum */
-	    return cumsum(t,s);
-	    break;
-	case 2: /* cumprod */
-	    return cumprod(t,s);
-	    break;
-	case 3: /* cummax */
-	    return cummax(t,s);
-	    break;
-	case 4: /* cummin */
-	    return cummin(t,s);
-	    break;
-	default:
-	    errorcall(call, _("unknown cumxxx function"));
-	}
+
+    if (isComplex(CAR(args))) {
+        PROTECT(t = CAR(args));
+        PROTECT(s = allocVector(CPLXSXP, LENGTH(t)));
+        setAttrib(s, R_NamesSymbol, getNamesAttrib(t));
+        if (LENGTH(t) == 0) { UNPROTECT(2); return s; }
+        switch (PRIMVAL(op) ) {
+        case 1:        /* cumsum */
+            ccumsum(t,s);
+            break;
+        case 2: /* cumprod */
+            ccumprod(t,s);
+            break;
+        case 3: /* cummax */
+        case 4: /* cummin */
+            errorcall(call, _("min/max not defined for complex numbers"));
+            break;
+        default:
+            errorcall(call, _("unknown cumxxx function"));
+        }
+    } 
+
+    else if ((isInteger(CAR(args)) || isLogical(CAR(args)))
+               && PRIMVAL(op) != 2) {
+        PROTECT(t = CAR(args));  /* no need to coerce LGL to INT */
+        PROTECT(s = allocVector(INTSXP, LENGTH(t)));
+        setAttrib(s, R_NamesSymbol, getNamesAttrib(t));
+        if (LENGTH(t) == 0) { UNPROTECT(2); return s; }
+        switch (PRIMVAL(op) ) {
+        case 1: /* cumsum */
+            icumsum(t,s);  /* may produce a warning, which allocates */
+            break;
+        case 3: /* cummax */
+            icummax(t,s);
+            break;
+        case 4: /* cummin */
+            icummin(t,s);
+            break;
+        default:
+            errorcall(call, _("unknown cumxxx function"));
+        }
     }
+
+    else {
+        PROTECT(t = coerceVector(CAR(args), REALSXP));
+        PROTECT(s = allocVector(REALSXP, LENGTH(t)));
+        setAttrib(s, R_NamesSymbol, getNamesAttrib(t));
+        if (LENGTH(t) == 0) { UNPROTECT(2); return s; }
+        switch (PRIMVAL(op) ) {
+        case 1: /* cumsum */
+            cumsum(t,s);
+            break;
+        case 2: /* cumprod */
+            cumprod(t,s);
+            break;
+        case 3: /* cummax */
+            cummax(t,s);
+            break;
+        case 4: /* cummin */
+            cummin(t,s);
+            break;
+        default:
+            errorcall(call, _("unknown cumxxx function"));
+        }
+    }
+
+    UNPROTECT(2);  /* t, s */
+    return s;
 }
 
 /* FUNTAB entries defined in this source file. See names.c for documentation. */
